# C--Assign5

./: CMakeLists.txt
src/: PointerFunctions.cpp
tests/: CMakeLists.txt  PointerFunctions_tests.cpp
